# sphinx-contrib-rapidoc

./: LICENSE  README.rst  local-dev-env.rst  setup.cfg  setup.py  test-requirements.txt
docs/: conf.py  index.rst
docs/_specs/: github.yml
sphinxcontrib/rapidoc/: __init__.py  rapidoc.j2
tests/: conftest.py
