[metadata]
name = rapidoc
summary = RapiDoc powered OpenAPI spec renderer for Sphinx.
description_file =
    README.rst
author = QO
author_email = quiz.oxis@gmail.com
home_page = http://www.sphinx-doc.org/
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Utilities

[options]
install_requires =
    pbr
    Jinja2 >= 3.1.4
    jsonschema >= 4.23.0
    six >= 1.17.0
    Sphinx >= 8.1.3
    PyYAML >= 6.0.2

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[mypy]
python_version = 3.8
show_column_numbers = True
show_error_context = True
ignore_missing_imports = True
follow_imports = skip
incremental = True
check_untyped_defs = True
warn_unused_ignores = True

[flake8]
show-source = True
builtins = unicode
